--- a/main_app/templates/routine/detail.html
+++ b/main_app/templates/routine/detail.html
@@ -11,7 +11,7 @@
         <div class="profile-circle">
         {% load static %}
         {% if user.profile.avatar %}
-            <img src="{% static  user.profile.avatar|cut:'main_app/static/'%}" alt='profile image' height= "155px" width="150px">
+            <img src="{% static  user.profile.avatar|cut:'main_app/static/'%}" alt='profile image' class="circle" height= "155px" width="150px">
         {% else %}
             <img src="https://i.postimg.cc/Z54tWZ5W/profile.png" alt="Default avatar" class="profile-avatar" height= "150px" width="150px">
         {% endif %}
